<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_blue_dark"
    tools:context=".ui.ResumeActivity">

    <ImageButton
        android:id="@+id/image_arrow_back"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:background="@null"
        android:contentDescription="@string/submit_left"
        android:src="@drawable/ic_arrow_back" />

    <View
        android:id="@+id/view_barra"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@+id/image_arrow_back"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="16dp"
        android:background="@color/blue_light" />

    <TextView
        android:id="@+id/text_resumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_barra"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/resumo_text"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_barra"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:padding="5dp"
        android:text="@string/date_text"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/image_drop_up"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/text_resumo"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_alignParentStart="true"
        app:tint="@color/green"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_arrow_drop_up" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_data"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/value_text"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <View
        android:id="@+id/view_barra_values"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/image_drop_up"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray" />

    <ImageView
        android:id="@+id/image_add_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_barra_values"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_add_comment" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_barra_values"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_toEndOf="@+id/image_add_comment"
        android:fontFamily="sans-serif-condensed-medium"
        android:padding="4dp"
        android:text="@string/description_text"
        android:textColor="@color/blue_light"
        android:textSize="14sp" />

    <View
        android:id="@+id/view_barra_below_addComment"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/image_add_comment"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray" />

    <ImageView
        android:id="@+id/image_category"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/view_barra_below_addComment"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:importantForAccessibility="no"
        android:padding="4dp"
        android:src="@drawable/ic_category" />

    <ImageView
        android:id="@+id/image_record"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/view_barra_below_addComment"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@id/image_category"
        android:importantForAccessibility="no"
        android:padding="4dp"
        android:src="@drawable/ic_smart_record" />

    <TextView
        android:id="@+id/text_category"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_category"
        android:layout_alignEnd="@+id/image_category"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/categorias_text"
        android:textColor="@color/white"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/text_recorrencia"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_record"
        android:layout_alignStart="@+id/image_record"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/recorrencia_text"
        android:textColor="@color/white"
        android:textSize="11sp" />

    <ImageButton
        android:id="@+id/image_button_close"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_background_red"
        android:contentDescription="@string/submit_close"
        android:src="@drawable/ic_close" />

    <ImageButton
        android:id="@+id/imageButton_save"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:tint="@color/white"
        android:background="@drawable/round_background_green"
        android:contentDescription="@string/submit_right"
        android:src="@drawable/ic_check" />

</RelativeLayout>