<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_blue_dark"
    tools:context=".ui.InformsValuesActivity">

    <ImageButton
        android:id="@+id/imageButton_arrow_back"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:background="@null"
        android:contentDescription="@string/submit_left"
        android:src="@drawable/ic_arrow_back" />

    <View
        android:id="@+id/view_barra_all"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/imageButton_arrow_back"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/blue_light" />

    <View
        android:id="@+id/view_barra_right"
        android:layout_width="128dp"
        android:layout_height="4dp"
        android:layout_below="@+id/view_barra_all"
        android:layout_alignStart="@+id/view_barra_all"
        android:layout_marginBottom="64dp"
        android:background="@color/blue_light" />

    <LinearLayout
        android:id="@+id/linear_entradaSaida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_barra_right"
        android:layout_centerHorizontal="true"
        android:background="@color/blue_light"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:id="@+id/text_entradas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@color/green_blue_dark"
            android:paddingHorizontal="16dp"
            android:text="Entradas"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_saidas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/blue_light"
            android:paddingHorizontal="16dp"
            android:text="Saída"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_pergunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_entradaSaida"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="32dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="De quanto estamos falando?"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_value"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/text_pergunta"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="16dp"
        android:background="@color/green_blue_dark"
        android:fontFamily="sans-serif-condensed"
        android:gravity="end"
        android:hint="R$ 1.800,00"
        android:inputType="numberDecimal"
        android:paddingEnd="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="34sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/view_barra_abaixo_edit"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/edit_value"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/linear_image_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_barra_abaixo_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="4dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/add_comentario"
            android:src="@drawable/ic_add_comment" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingHorizontal="16dp"
            android:text="@string/adicionar_uma_descr"
            android:textColor="@color/blue_light"
            android:textSize="16sp" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton_btClose"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:background="@drawable/round_background_red"
        android:contentDescription="@string/submit_close"
        android:src="@drawable/ic_close" />

    <ImageButton
        android:id="@+id/imageButton_btNext"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:background="@drawable/round_background_blue"
        android:contentDescription="@string/submit_right"
        android:src="@drawable/ic_right" />

</RelativeLayout>