<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewMovActivity"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#384C59">


        <ImageButton android:id="@+id/arrow_back_inform_values"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="25dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/submit_left"
            android:src="@drawable/arrow_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/bar_pg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/arrow_back_inform_values"

            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"

            app:layout_constraintTop_toBottomOf="@+id/arrow_back_inform_values">

            <View android:id="@+id/up_bar_pg"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/blue_light"


                android:layout_marginHorizontal="45dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <View android:id="@+id/down_bar_pg"
                android:layout_width="107.33dp"
                android:layout_height="4dp"
                android:background="@color/blue_light"

                android:layout_marginHorizontal="45dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_margin="20dp"

            app:layout_constraintTop_toBottomOf="@+id/bar_pg"
            app:layout_constraintBottom_toTopOf="@+id/bt_cancelar"
            android:fillViewport="true">

            <FrameLayout android:id="@+id/fragment_placer"

                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </ScrollView>

        <ImageButton android:id="@+id/bt_cancelar"

            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_background_red"
            android:contentDescription="@string/botaoCancelar"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton android:id="@+id/bt_avancar_fg"

            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_background_blue"
            android:contentDescription="@string/botaoAvancar"
            android:src="@drawable/ic_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>